tests/compile_time_tests/tag_attribute_case_value_not_lower.rs
use tagname::TagName;

#[derive(TagName)]
enum Cases {
    #[tag(case = "something")]
    Lower,
    Upper
}

fn main() {
}
